# Macro-Stars

./: .gitignore
EnStarMecro/: CMakeLists.txt  EnStarMecro.sln  b.sh  할일.txt
EnStarMecro/EnStarMecro/: ConcertListScene.cpp  ConcertListScene.h  ConcertPrepareScene.cpp  ConcertPrepareScene.h  ConcertResultScene.cpp  ConcertResultScene.h  ConcertTodo.h  ConcertUnitScene.cpp  ConcertUnitScene.h  CoverTodo.h  CoverUnitScene.cpp  CoverUnitScene.h  DIFScene.cpp  DIFScene.h  EasyVPNScene.cpp  EasyVPNScene.h  EnStarMecro.vcxproj  FeverScene.cpp  FeverScene.h  GameClientMgr.cpp  GameClientMgr.h  HolaScene.cpp  HolaScene.h  IntroScene.cpp  IntroScene.h  KakaoLoginScene.cpp  KakaoLoginScene.h  KakaoPopUpScene.cpp  KakaoPopUpScene.h  LoadingScene.cpp  LoadingScene.h  MainProc.cpp  MainProc.h  MainScene.cpp  MainScene.h  NomalProduceScene.cpp  NomalProduceScene.h  OpenVPNScene.cpp  OpenVPNScene.h  PlayStoreScene.cpp  (+30 more)
EnStarMecro/EnStarMecro/img/KNN/: classifications.xml  images.xml
EnStarMecro/EnStarMecro/img/KNN/bak/: classifications.xml  images.xml
EnStarMecro/linux/: CMakeLists.txt  MacroStars!.code-workspace
EnStarMecro/utill/: ADB.app  Detector.app  am.app
EnStarMecro/utill/detector/: CMakeLists.txt  main.cpp
